[package]
name = "latin-sampler"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
rand = "0.9.2"
serde = { version = "1.0", optional = true }

# Dependencies only included for the wasm32 target
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
rand_chacha = "0.9.0"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
rand_chacha = "0.9.0"
serde_json = "1.0"
